Fix a UI bug and beautify cart-pole rendering (#123)
* Fix a UI bug and beautify cart-pole rendering

- Fix a UI bug in which onGameEnd() callback was not called if the
  game ends with maximum steps reached.
- Make the rendering of the cart-pole prettier by adding
  - ground and tilted olines
  - coloring
  - limits on the left and right ends

* Make sure that both left and right limits are rendered

* Simplify logic for onGameEnd

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@ limitations under the License.
       display: inline-block;
       padding-left: 0px;
       padding-right: 10px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      margin: 5px;
       vertical-align: top;
       border: 1px #AAA solid;
     }
