renaming and stuff

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ limitations under the License.
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../shared/tfjs-examples.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -74,7 +74,7 @@ limitations under the License.
         <p>This example illustrates how to use TensorFlow.js to perform simple
           <a href="https://en.wikipedia.org/wiki/Reinforcement_learning">reinforcement learning</a> (RL).
           Specifically, it showcases an implementation of the policy-gradient method in TensorFlow.js.
-          This implementation is used to solve the classic <a href="https://en.wikipedia.org/wiki/Inverted_pendulum">cart-pole
+          This implementation is used to solve the classic <a href="https://en.wikipedia.org/wiki/Inverted_pendulum">knapsack
             control problem.</a>
         </p>
 
@@ -195,7 +195,7 @@ limitations under the License.
       <section>
         <p class='section-head'>Simulation</p>
         <div>
-          <canvas id="cart-pole-canvas" height="150px" width="500px"></canvas>
+          <canvas id="knapsack-canvas" height="150px" width="500px"></canvas>
         </div>
       </section>
 
